# Zappy

./: Makefile  README.md
ai/: .gitignore  Makefile
ai/src/: bot.py  bot_behavior.py  bot_core.py  bot_functions.py  main.py
gui/: .gitignore  CMakeLists.txt  compile_gui.sh
gui/source/: main.cpp
gui/source/core/: Core.cpp  Core.hpp  include.hpp
gui/source/core/camera/: Camera.cpp  Camera.hpp  cameraLimits.hpp
gui/source/core/parser/: Error.cpp  Error.hpp  Parser.cpp  Parser.hpp
gui/source/core/socket/: Socket.cpp  Socket.hpp
gui/source/core/uielement/: IUiElement.hpp  UiElements.cpp  UiElements.hpp
gui/source/events/: events.cpp  events.hpp
gui/source/game/: Broadcast.cpp  Broadcast.hpp  Game.cpp  Game.hpp
gui/source/game/map/: Map.cpp  Map.hpp  Ressources.cpp  Ressources.hpp  Tile.cpp  Tile.hpp  graphics.hpp
gui/source/game/team/: Team.cpp  Team.hpp
gui/source/game/team/player/: Player.cpp  Player.hpp
gui/source/math/: Complex3D.cpp  Complex3D.hpp  Random.cpp  Random.hpp  math.hpp
gui/source/renderer/: SFML.cpp  SFML.hpp
gui/source/routes/: SpriteRouteConstants.cpp  SpriteRouteConstants.hpp
gui/source/tools/: nullable.hpp
server/: .gitignore  Makefile  server.c
server/command/: Makefile
server/command/list/: cmd_bct.c  cmd_brad.c  cmd_co_nbr.c  cmd_ebo.c  cmd_edi.c  cmd_eject.c  cmd_eject_2.c  (+32 more)
server/destruction/: Makefile  destruction.c
server/game/: Makefile
server/includes/: destruct.h  game.h  init.h  server.h  tools.h
server/init/: Makefile  init.c
server/tools/: Makefile  free_args.c  get_args.c  my_strdup.c  send.c
(+48 files in other folders)
